--- a/Task (03.10) Classwork/index.html
+++ b/Task (03.10) Classwork/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <script type="text/javascript" src="./moment.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./main2.js"></script>
 
 </body>
 
