--- a/Task (03.10) Classwork/index.html
+++ b/Task (03.10) Classwork/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 03.10 Classwork</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./fontello-b90ebb4b/css/fontello.css">
-    <link rel="stylesheet" href="./normalize.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./fonts/fontello-b90ebb4b/css/fontello.css">
+    <link rel="stylesheet" href="./style/normalize.css">
 
 </head>
 
@@ -33,8 +33,8 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="./moment.js"></script>
-    <script type="text/javascript" src="./main2.js"></script>
+    <script type="text/javascript" src="./js/moment.js"></script>
+    <script type="text/javascript" src="./js/main2.js"></script>
 
 </body>
 
