--- a/Task (02.10)/index.html
+++ b/Task (02.10)/index.html
@@ -12,15 +12,14 @@
 <body>
     <div class="main">
         <div class="tank">
-            <img src="./res/tank.png">
+            <img class="tankImg" src="./res/tank.png">
         </div>
 
     </div>
     <nav>
-        <div class="btnleft" id="buttLeft">Left</div>
-        <div class="btnright" id="buttRight">Right</div>
+        <div class="btnLeft" id="buttLeft">Left</div>
+        <div class="btnRight" id="buttRight">Right</div>
     </nav>
-    <div class="ground"></div>
 
     <script type="text/javascript" src="./js/main.js"></script>
 
