--- a/Task (29.09)/index.html
+++ b/Task (29.09)/index.html
@@ -11,7 +11,7 @@
             
         </div>
 
-        <script type="text/javascript" src="./main.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
 
     </body>
 </html>
