--- a/Task (09.10) Classwork/index.html
+++ b/Task (09.10) Classwork/index.html
@@ -6,13 +6,20 @@
         <title>Task 09.10 Classwork</title>
         <link rel="stylesheet" href="./style/style.css">
         <link rel="stylesheet" href="./style/normalize.css">
+        <link rel="stylesheet" href="./style/fontello-f528b45c/css/fontellofont.css">
     </head>
     
     <body>
         <main>
             <div class="field">
-                
+
             </div>
+            <nav>
+                <div class="icon-left-big"></div>
+                <div class="icon-up-big"></div>
+                <div class="icon-down-big"></div>
+                <div class="icon-right-big"></div>
+            </nav>
         </main>
 
 
