--- a/Task (09.10) Classwork/index.html
+++ b/Task (09.10) Classwork/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Task 09.10 Classwork</title>
         <link rel="stylesheet" href="./style/style.css">
-        <link rel="stylesheet" href="./style/normalize.css">
+        <link rel="stylesheet" href="./style/normalize/normalize.css">
         <link rel="stylesheet" href="./style/fontello-f528b45c/css/fontellofont.css">
     </head>
     
