--- a/Task (13.10) Classwork/index.html
+++ b/Task (13.10) Classwork/index.html
@@ -5,18 +5,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style/style.css">
+        <link rel="stylesheet" href="./style/normalize/normalize.css">
         <title>Task (12.09) Classwork</title>
     </head>
 
     <body>
-        <div class="buttons">
-            <div class="btn1">btn1</div>
-            <div class="btn2 disabl">btn2</div>
+        <main>
+            <div class="parkingLots">
 
-        </div>
-        <div class="hello disabl">Hello!</div>
+            </div>
+            <div class="currTime"></div>
+        </main>
 
         <script type="text/javascript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/moment/moment.js"></script>
 
     </body>
 
