--- a/Task (17.10) Classwork/index.html
+++ b/Task (17.10) Classwork/index.html
@@ -6,20 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style/style.css">
         <link rel="stylesheet" href="./style/normalize/normalize.css">
-        <title>Task (12.09) Classwork</title>
+        <title>Task (17.10) Classwork</title>
     </head>
 
     <body>
         <main>
-            <div class="parkingLots">
-
+            <div class="cardsInfo">
+                <div class="nextCard"></div>
+                <div class="cardsLeft">Осталось карт: 30</div>
             </div>
-            <div class="currTime"></div>
-            <div class="occupiedPlaces"></div>
+            <div class="field"></div>
         </main>
 
         <script type="text/javascript" src="./js/main.js"></script>
-        <script type="text/javascript" src="./js/moment/moment.js"></script>
 
     </body>
 
