--- a/Task (17.10) Classwork/index.html
+++ b/Task (17.10) Classwork/index.html
@@ -18,7 +18,7 @@
             <div class="field"></div>
         </main>
 
-        <script type="text/javascript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/mainRework.js"></script>
 
     </body>
 
